Update other sections and image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>TechWave - Empowering Connections, Enriching Lives.</title>
 </head>
 <body>
@@ -31,5 +31,36 @@
         <img style="width: 500px; height: auto;" src="cover.png">        
 
     </div>
+
+    <div class="sec2">
+            <h3 style="text-align: center;">What We Believe</h3>
+            <ul>
+                <li><img class="thumbnail" src="infraa.png"><p> Building and maintaining a robust and expansive network infrastructure in a wider geographic area</p> </li>
+                <li><img class="thumbnail" src="fast.png"><p>Providing consistently high internet speeds with minimal downtime is crucial.</p> </li>
+                <li><img class="thumbnail" src="247support.png"><p>Offering 24/7 technical support, quick issue resolution, and friendly customer service representatives can make customers feel valued and cared for. Happy customers are more likely to stay loyal and recommend your service to others.</p> </li>
+                <li><img class="thumbnail" src="inno.png"><p>Innovative cloud storage, cybersecurity solutions, streaming content partnerships, and smart home integration</p> </li>
+            </ul>
+    </div>
+
+    <div class="sec3">
+        <p class="quote">"Switching to TechWave was a game-changer for me. The speed and reliability of their internet service have exceeded my expectations. As someone who relies on a stable connection for work and entertainment, I'm thrilled to have found a provider that truly delivers on its promises."</p>
+        <p class="author">- Emily W.</p>
+    </div>
+
+    <div class="sec2">
+        <div class="signup">
+            <div>
+                <p>Ready to experience blazing-fast internet and top-notch customer support?</p>
+                <p>Sign up now to unlock a world of seamless connectivity!</p>
+            </div>
+            <button class="button-top">Sign Up</button>
+        </div>
+
+    </div>
+
+    <div class="top-menu">
+        <p>Copyright TechWave 2023</p>
+    </div>
+
 </body>
 </html>
