--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
 
     <div class="sec2">
-            <h3 style="text-align: center;">What We Believe</h3>
+            <h3 style="text-align: center;">Our core value.</h3>
             <ul>
-                <li><img class="thumbnail" src="infraa.png"><p> Building and maintaining a robust and expansive network infrastructure in a wider geographic area</p> </li>
-                <li><img class="thumbnail" src="fast.png"><p>Providing consistently high internet speeds with minimal downtime is crucial.</p> </li>
-                <li><img class="thumbnail" src="247support.png"><p>Offering 24/7 technical support, quick issue resolution, and friendly customer service representatives can make customers feel valued and cared for. Happy customers are more likely to stay loyal and recommend your service to others.</p> </li>
-                <li><img class="thumbnail" src="inno.png"><p>Innovative cloud storage, cybersecurity solutions, streaming content partnerships, and smart home integration</p> </li>
+                <li><img class="thumbnail" src="infraa.png"><p> Infrastructure in a wider geographic area</p> </li>
+                <li><img class="thumbnail" src="fast.png"><p>Providing consistently high internet speeds</p> </li>
+                <li><img class="thumbnail" src="247support.png"><p>Offering 24/7 technical support</p> </li>
+                <li><img class="thumbnail" src="inno.png"><p>Innovative cloud storage, cybersecurity solutions</p> </li>
             </ul>
     </div>
 
@@ -50,8 +50,8 @@
     <div class="sec2">
         <div class="signup">
             <div>
-                <p>Ready to experience blazing-fast internet and top-notch customer support?</p>
-                <p>Sign up now to unlock a world of seamless connectivity!</p>
+                Ready to experience blazing-fast internet and top-notch customer support?
+                Sign up now to unlock a world of seamless connectivity!
             </div>
             <button class="button-top">Sign Up</button>
         </div>
