Finish the landing page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
         <h2>Welcome to TechWave</h2>  
         <p>Ready to experience blazing-fast internet and top-notch customer support? Join us today and elevate your online journey with TechWave. Sign up now to unlock a world of seamless connectivity!</p>
-        <button class="button-top">Sign Up</button>
+        <button class="button-top"><a href="#">Sign Up</a></button>
         </div>
         <img style="width: 500px; height: auto;" src="cover.png">        
 
@@ -47,18 +47,18 @@
         <p class="author">- Emily W.</p>
     </div>
 
-    <div class="sec2">
+    <div class="sec4">
         <div class="signup">
             <div>
                 Ready to experience blazing-fast internet and top-notch customer support?
-                Sign up now to unlock a world of seamless connectivity!
+                <br><span style="font-weight: 300;">Sign up now to unlock a world of seamless connectivity!</span>
             </div>
-            <button class="button-top">Sign Up</button>
+            <button class="button-top"><a href="#">Sign Up</a></button>
         </div>
 
     </div>
 
-    <div class="top-menu">
+    <div class="footer">
         <p>Copyright TechWave 2023</p>
     </div>
 
